// Vitest Snapshot v1

exports[`lang=js > convert 1`] = `
"import { defineComponent, toRefs, computed, ref } from \\"vue\\";
const props = defineProps({
  msg: {
    type: String,
    required: true,
    default: \\"HelloWorld\\",
  },
  foo: {
    type: String,
  },
});
const { msg, foo } = toRefs(props);
const newMsg = computed(() => msg.value + \\"- HelloWorld\\");

const count = ref(0);
"
`;

exports[`lang=ts > type-base declaration 1`] = `
"import { defineComponent, toRefs, computed, ref } from \\"vue\\";
type Props = { msg: string; foo?: string };
const props = withDefaults(defineProps<Props>(), { msg: \\"HelloWorld\\" });
const { msg, foo } = toRefs(props);
const newMsg = computed(() => msg.value + \\"- HelloWorld\\");

const count = ref(0);
"
`;
